# github-cicd

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/actions/lint-test/: action.yml
.github/actions/migration/: action.yml
.github/workflows/: job-deployment.yml  main.yml  pipeline-pr.yml  pipeline-release.yml
demo/: main.py
