[tool.poetry]
name = "demo"
version = "0.1.0"
description = "API and storage for bunker tanks"
authors = ["Bunker Optimisation Team"]


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
ddtrace = "1.12.0"
mangum = "^0.17.0"
uvicorn = "^0.20.0"
pyjwt = "^2.6.0"
fastapi = "^0.88.0"
httpx = "^0.23.1"
pydantic = "^1.10.2"
requests = "^2.28.1"
boto3 = "^1.26.77"
boto3-stubs = {extras = ["ses"], version = "^1.26.77"}
python-json-logger = "^2.0.7"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^0.982"
black = "^22.3.0"
isort = "^5.10.1"
tox = "^3.25.0"
bandit = "^1.7.4"
pre-commit = "^2.18.1"
pylint = "^2.13.8"
coverage = "^6.4.1"
tox-poetry = "^0.4.1"
pytest-alembic = "^0.8.4"
pytest-mock-resources = "^2.6.3"
python-on-whales = "^0.53.0"
types-requests = "^2.28.11.5"
moto = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
